fixing issue where menu button on mobile appears behind the nav when expanded

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ nav > ul > li {
 	background-color: #4d5d53;
 	top: 0;
 	left: 0;
-	z-index: 1;
+	z-index: 2;
 }
 
 /*section {
